--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-<div class="titulo" id="titulo"><h1>CÉLIO DIAS</h1></div>
+<div class="titulo" id="titulo"><img src="images/celio-dias-logo.PNG"></div>
 <div class="logo" id="logo"><img src="images/logo-carro.PNG"></div>
 </header>
  
