foto-perfil-celio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </header>
  
 <section>
-    <div class="carro-perfil" id="carro-perfil"><img src="images/carro-perfil.JPG">
+    <div class="carro-perfil" id="carro-perfil"><img src="images/foto-perfil.jpeg">
     </div>
     <div><a href="https://wa.me/5531975954204" target="_blank"><button class="cta" id="cta">AGENDE SUA VIAGEM</button></a></div>
 </section>
